move to slurm 24.05.3 (req slurm.conf edit)
Signed-off-by: Thomas Naughton <naughtont@ornl.gov>

--- a/slurm.conf
+++ b/slurm.conf
@@ -56,7 +56,11 @@ SchedulerType=sched/backfill
 #SchedulerAuth=
 #SchedulerPort=
 #SchedulerRootFilter=
-SelectType=select/cons_res
+# TJN: workaround
+#SelectType=select/cons_res
+#SelectTypeParameters=CR_CPU_Memory
+#
+SelectType=select/cons_tres
 SelectTypeParameters=CR_CPU_Memory
 FastSchedule=1
 #PriorityType=priority/multifactor
